--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
+    "ts-node": "^10.5.0",
     "typescript": "~4.3.5"
   },
   "private": true
