--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react": "^17.0.21",
+    "@types/react-dom": "^17.0.17",
+    "@types/react-native": "^0.64.3",
     "@types/react-native-animated-progress": "^1.0.0",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
